0.6.2 - currently working on

0.6.1 - released 2009-07-01
- [#2988] Fix: Skip the ZipArchive tests if no ZipArchive is available
- [#3136] Change: Remove srand() call from Mail_mime class
- [#3135] Change: Use $_SERVER['REQUEST_TIME'] in Mail_mime class
- [#3056] Fix: E-mails have double line breaks
- [#3080] Feature: Add an object factory
- [#3068] Fix: Value of $functionName not quoted in the data mapper
- [#2973] Fix: tx_oelib_List::purgeCurrent is not applicable within foreach loops

0.6.0 - released 2009-06-05
- [#2991] Feature: Add a test that fails if the phpmyadmin extension is installed
- [#1185] Feature: Add a translator class
- [#2960] Feature: Add a function for setting a BE user's language
- [#2959] Feature: Add a function for getting the current BE user
- [#961] Change: Require TYPO3 4.2
- [#1141] Change: Require PHP 5.2
- [#2950] Feature: Add a method getArrayKeys() to tx_oelib_Configuration
- [#2915] Fix: The CLI module also selects deleted FE users
- [#2898] Feature: Add a function mapper::getLoadedTestingModel
- [#2751] Feature: Support bidirectional relations
- [#2886] Change: Refactor the creation of the cObj in the templatehelper
- [#2883] Feature: Add a function to tx_oelib_List to purge elements from the list
- [#2882] Feature: Add a function to tx_oelib_List to append a list to another list
- [#2826] Feature: Add an interface "address" and use it for the realty object model
- [#2749] Feature: Add a function for sorting list by providing a comparison function
- [#2325] Fix: SQL errors in tx_oelib_testingFramework_testcase with TYPO3 4.3
- [#2794] Feature: Add a function FrontEndUserMapper::getGroupMembers
- [#2482] Feature: Support 1:n relations (compositions)
- [#1841] Feature: Add functions in the testing framework to create dummy ZIP archives
- [#2588] Fix: Creating a fake FE must set the FE user status to "logged out"
- [#2788] Change: Allow login of FE user models which are not in database with the testingFramework