@@ -1,4 +1,5 @@
 0.6.2 - currently working on
+- [#3165] Fix: Umlauts not encoded correctly in the e-mail subject
 
 0.6.1 - released 2009-07-01
 - [#2988] Fix: Skip the ZipArchive tests if no ZipArchive is available
